# film_watch_site

./: Dockerfile  Makefile  README.md  TODO  docker-compose.yml  pyproject.toml  requirements.txt  sample.json  web_scraping.py
apps/: sitemaps.py  views.py
apps/movies/: __init__.py  admin.py  apps.py  documents.py  filters.py  urls.py
apps/shared/: __init__.py  decorators.py  models.py
apps/site_info/: admin.py  apps.py  urls.py
apps/users/: admin.py  token_gen.py  urls.py
compose/django/: Dockerfile  entrypoint  start
compose/nginx/: nginx.conf
movies/: admin.py  apps.py  urls.py
movies/migrations/: 0001_initial.py
movies/models/: movie.py
movies/views/: film.py
root/: __init__.py  celery.py  settings.py  task.py  urls.py  views.py
shared/utils/: send_to_email.py
site_info/models/: about.py
site_info/views/: about.py
static/css/: category.css  content.css  footer.css  full-search.css  header.css  login.css  main.css  mainmenu.css  mobile-footer.css  pagination.css  product-show.css  profile.css  slider.css
static/js/: fullsearch.js  header.js  jquery.min.js  main.js  plugins.js  plugins2.js  slider.js
static/php/: sendEmail.php
templates/: index.html
templates/Film-Review-Movie-Database/: index.html  moviegridfw_light.html
templates/Kinogo/: 404.html  category.html  index.html  login.html  profile.html  register.html
templates/admin/: index.html
templates/email/: activate-account-for-register.html  feedback-email.html
users/: __init__.py  token_gen.py  urls.py
users/forms/: login.py  register.py  reset_password.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
(+96 files in other folders)
