[tool.poetry]
name = "film_watch_site"
version = "0.1.0"
description = ""
authors = ["Abdurashid Khikmatov"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.1"
celery = "5.2.7"
requests = "2.31.0"
python-dotenv = "1.0.0"
flower = "1.2.0"
Pillow = "9.5.0"
psycopg2-binary = "2.9.6"
django-autoslug = "1.9.9"
django-redis = "5.2.0"
django-elasticsearch-dsl = "7.3"
elasticsearch-dsl = "7.4.1"
amqp = "5.1.1"
asgiref = "3.7.2"
billiard = "3.6.4.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
elasticsearch = "7.9.1"
humanize = "4.6.0"
idna = "3.4"
kombu = "5.3.0"
prometheus-client = "0.17.0"
prompt-toolkit = "3.0.38"
python-dateutil = "2.8.2"
pytz = "2023.3"
redis = "4.5.5"
six = "1.16.0"
sqlparse = "0.4.4"
tornado = "6.3.2"
urllib3 = "2.0.2"
vine = "5.0.0"
wcwidth = "0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
